# nn-from-scratch

./: README.md  core.py  example.py  model.py  plot.py  pyproject.toml
docs/source/: conf.py  index.rst
docs/source/autodoc/: core.rst  model.rst
