[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nn-from-scratch"
version = "0.0.1"
authors = [
    { name="Gerard Castro Castillo", email="gerardc98@gmail.com" }
]
description = "NN implementation from scratch using automatic differentiation"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gcastro-98/nn-from-scratch"
"Bug Tracker" = "https://github.com/gcastro-98/nn-from-scratch/issues"